ci(omni_remote_cache_service): use rust-multiplaform preset

--- a/services/omni_remote_cache_service/project.omni.yaml
+++ b/services/omni_remote_cache_service/project.omni.yaml
@@ -3,13 +3,9 @@ name: omni_remote_cache_service
 
 extends:
   - "@workspace/omni/presets/rust-service.omni.yaml"
+  - "@workspace/omni/presets/rust-multiplatform.omni.yaml"
 
 tasks:
-  build:
-    output:
-      files:
-        - "@workspace/target/release/omni_remote_cache_service"
-
   dev:
     env:
       vars:
