chore: improve rust omni presets

--- a/omni/presets/rust-cli.omni.yaml
+++ b/omni/presets/rust-cli.omni.yaml
@@ -10,8 +10,7 @@ tasks:
     cache:
       key:
         env:
-          append:
-            - RUST_BUILD_ADDITIONAL_ARGS
+          append: [RUST_BUILD_ADDITIONAL_ARGS]
     dependencies:
       - test
 
