--- a/omni/presets/rust-multiplatform.omni.yaml
+++ b/omni/presets/rust-multiplatform.omni.yaml
@@ -137,7 +137,7 @@ tasks:
 
   build:aarch64-unknown-linux-gnu:
     enabled: "{{ env.RUST_TARGET and env.RUST_TARGET is containing('aarch64-unknown-linux-gnu') }}"
-    command: cargo build --target aarch64-unknown-linux-gnu -p ${PROJECT_NAME} ${RUST_TEST_ADDITIONAL_ARGS:-}
+    command: cargo build --release --target aarch64-unknown-linux-gnu -p ${PROJECT_NAME} ${RUST_TEST_ADDITIONAL_ARGS:-}
     dependencies:
       - ^build:aarch64-unknown-linux-gnu
     output:
@@ -150,7 +150,7 @@ tasks:
 
   build:x86_64-unknown-linux-gnu:
     enabled: "{{ env.RUST_TARGET and env.RUST_TARGET is containing('x86_64-unknown-linux-gnu') }}"
-    command: cargo build --target x86_64-unknown-linux-gnu -p ${PROJECT_NAME} ${RUST_TEST_ADDITIONAL_ARGS:-}
+    command: cargo build --release --target x86_64-unknown-linux-gnu -p ${PROJECT_NAME} ${RUST_TEST_ADDITIONAL_ARGS:-}
     dependencies:
       - ^build:x86_64-unknown-linux-gnu
     output:
@@ -163,7 +163,7 @@ tasks:
 
   build:x86_64-apple-darwin:
     enabled: "{{ env.RUST_TARGET and env.RUST_TARGET is containing('x86_64-apple-darwin') }}"
-    command: cargo build --target x86_64-apple-darwin -p ${PROJECT_NAME} ${RUST_TEST_ADDITIONAL_ARGS:-}
+    command: cargo build --release --target x86_64-apple-darwin -p ${PROJECT_NAME} ${RUST_TEST_ADDITIONAL_ARGS:-}
     dependencies:
       - ^build:x86_64-apple-darwin
     output:
@@ -176,7 +176,7 @@ tasks:
 
   build:aarch64-apple-darwin:
     enabled: "{{ env.RUST_TARGET and env.RUST_TARGET is containing('aarch64-apple-darwin') }}"
-    command: cargo build --target aarch64-apple-darwin -p ${PROJECT_NAME} ${RUST_TEST_ADDITIONAL_ARGS:-}
+    command: cargo build --release --target aarch64-apple-darwin -p ${PROJECT_NAME} ${RUST_TEST_ADDITIONAL_ARGS:-}
     dependencies:
       - ^build:aarch64-apple-darwin
     output:
@@ -189,7 +189,7 @@ tasks:
 
   build:x86_64-pc-windows-msvc:
     enabled: "{{ env.RUST_TARGET and env.RUST_TARGET is containing('x86_64-pc-windows-msvc') }}"
-    command: cargo build --target x86_64-pc-windows-msvc -p ${PROJECT_NAME} ${RUST_TEST_ADDITIONAL_ARGS:-}
+    command: cargo build --release --target x86_64-pc-windows-msvc -p ${PROJECT_NAME} ${RUST_TEST_ADDITIONAL_ARGS:-}
     dependencies:
       - ^build:x86_64-pc-windows-msvc
     output:
@@ -202,7 +202,7 @@ tasks:
 
   build:aarch64-pc-windows-msvc:
     enabled: "{{ env.RUST_TARGET and env.RUST_TARGET is containing('aarch64-pc-windows-msvc') }}"
-    command: cargo build --target aarch64-pc-windows-msvc -p ${PROJECT_NAME} ${RUST_TEST_ADDITIONAL_ARGS:-}
+    command: cargo build --release --target aarch64-pc-windows-msvc -p ${PROJECT_NAME} ${RUST_TEST_ADDITIONAL_ARGS:-}
     dependencies:
       - ^build:aarch64-pc-windows-msvc
     output:
@@ -215,7 +215,7 @@ tasks:
 
   build:current:
     enabled: "{{ not env.RUST_TARGET or env.RUST_TARGET == '' }}"
-    command: cargo build -p ${PROJECT_NAME} ${RUST_TEST_ADDITIONAL_ARGS:-}
+    command: cargo build --release -p ${PROJECT_NAME} ${RUST_TEST_ADDITIONAL_ARGS:-}
     dependencies:
       - ^build:current
     cache:
