ci: fix npm package global deps

--- a/.github/actions/package-jobs-artifacts/action.yaml
+++ b/.github/actions/package-jobs-artifacts/action.yaml
@@ -21,7 +21,8 @@ outputs:
 runs:
   using: "composite"
   steps:
-    - run: npm install archiver glob
+    - name: Install Dependencies
+      run: npm install -g archiver glob
       shell: bash
 
     - name: Collect Artifacts
